styles.css
/*-- navbar --*/
#quarto-header {
  border-bottom: 1px solid black;
}

.navbar {
  max-height: 475px;
}

.navbar-logo {
  max-height: 150px;
  width: auto;
  padding-right: 4px;
  align-items: baseline;
}

.navbar > .container,
.navbar > .container-fluid,
.navbar > .container-sm,
.navbar > .container-md,
.navbar > .container-lg,
.navbar > .container-xl,
.navbar > .container-xxl {
  display: flex;
  max-height: 475px;
  flex-wrap: inherit;
  align-items: baseline;
  justify-content: center;
}


/*-- quarto titles --*/
#title-block-header {
  margin-block-end: 1rem;
  position: relative;
  margin-top: -1px;
  margin-bottom: 0;
  border-bottom: 1px solid black;
  background-color: #f0eeeb;
}

.quarto-title-banner {
  margin-bottom: 0.75em;
}

@media (max-width: 991.98px) {
.quarto-title-banner {
    padding-top: 2.5em;
    padding-bottom: 0;
}
}

@media (min-width: 992px) {
.quarto-title-banner {
    padding-top: 2.5em;
    padding-bottom: 0;
}
}

.quarto-title-banner .quarto-title .title {
  font-weight: 500;
}

#title-block-header.quarto-title-block.default .description {
  margin-top: 1.5em;
  font-weight: 400;
  font-size: 1.2em;
  color: black;
}

.quarto-title .quarto-categories {
  display: flex;
  column-gap: 0.4em;
  padding-bottom: 0.5em;
  margin-top: 1.9em;
}

.quarto-title .quarto-categories .quarto-category {
  padding: 0.25em 0.75em;
  font-family: 'Oswald';
  font-size: .9em;
  font-weight: 400;
  color: #939bc9;
  text-transform: uppercase;
  border: solid 1px;
  border-radius: 0.25rem;
  opacity: 1;
}

.quarto-title-meta {
  padding-bottom: 1.8em;
}

#title-block-header.quarto-title-block.default .quarto-title-meta-heading {
  font-family: 'Oswald';
  text-transform: uppercase;
  margin-top: 1em;
  font-size: 0.9em;
  opacity: 1;
  font-weight: 400;
}

#title-block-header.quarto-title-block.default .quarto-title-meta-contents {
  font-family: 'Oswald';
  text-transform: uppercase;
  font-weight: 300;
  opacity: 0.8;
  font-size: 0.9em;
}


/*-- main content --*/
body.nav-fixed {
  padding-top: 105px;
  background-color: #f0eeeb;
}

#quarto-content {
  background-color: #f0eeeb;
}

@media (max-width: 991.98px) {
  #quarto-content {
      padding-top: 1em;
      padding-bottom: 0;
  }
}
  
@media (min-width: 992px) {
  .quarto-content {
    padding-top: 2.5em;
    padding-bottom: 0;
  }
}

h2.anchored {
  margin-bottom: 0;
}

blockquote {
  margin: 0 0 1rem;
  padding: 0.625rem 1.25rem;
  border-left: 0.25rem solid black;
}

.blockquote {
  font-size: inherit;
  padding-left: 1rem;
  padding-right: 1.5rem;
  color: black;
}

.panel-caption, .figure-caption, figcaption {
  color: black;
  font-size: 0.825rem;
  margin-bottom: 1rem;
}

#quarto-appendix.default {
  background-color: #f0eeeb;
  padding-top: 1.5em;
  margin-top: 2em;
  z-index: 998;
  border-top: 1px solid black
}

::marker {
  font-variant-numeric: normal;
}

.further-info {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  padding-top: 1.5em;
  padding-bottom: .75em;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
}

/*-- sidebar --*/
.sidebar nav[role=doc-toc]>h2, .sidebar nav[role=doc-toc]>.h2 {
  font-family: 'Oswald';
  font-size: .875rem;
  font-weight: 500;
  text-transform: uppercase;
  margin-bottom: 0.5rem;
  margin-top: 0.3rem;
  border-bottom: 0;
  padding-bottom: 0;
  padding-top: 0px;
}

.sidebar nav[role=doc-toc] ul>li>a.active {
  border-left: 1px solid #939bc9;
  font-weight: 500;
  color: #939bc9 !important;
}

.sidebar nav[role=doc-toc]>ul a {
  border-left: none;
  padding-left: 0.6rem;
}

.sidebar nav[role=doc-toc]>ul li a {
  font-family: 'Montserrat';
  font-weight: 500;
  line-height: 1.1rem;
  padding-bottom: 0.2rem;
  padding-top: 0.2rem;
  color: black;
}

.toc-actions a {
  text-decoration: none;
  font-family: 'Montserrat';
  font-weight: 500;
  color: black;
}

.column-margin figcaption, .margin-caption, div.aside, aside, .column-margin p {
  font-family: 'Montserrat';
  font-weight: 400;
  color: black;
  font-size: .825rem;
  text-decoration: none;
}

.column-margin, .figure-caption a {
  text-decoration: none;
  color: #939bc9;
  font-weight: 700;
}

/*-- font styles --*/
h3,
.h3,
h4,
.h4,
h5,
.h5,
h6,
.h6 {
  font-family: 'Oswald';
  text-transform: none;
  letter-spacing: 1px;
}

h1, .h1 {
  font-family: 'Oswald';
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 1px;
}

h2, .h2 {
  font-family: 'Oswald';
  font-weight: 500;
  text-transform: none;
  border-bottom: none;
  letter-spacing: 1px;
}

body {
  font-family: 'Montserrat';
  font-weight: 400;
  color: black;
}

p > a {
  color: #939bc9;
  font-weight: 700;
  text-decoration: none; 
}

b, strong a {
  text-decoration: none;
  color: #939bc9;
}

ul a {
  color: #939bc9;
  font-weight: 700;
  text-decoration: none; 
}

dd a {
  color: #939bc9;
  font-weight: 700;
  text-decoration: none; 
}

/*-- datasciencebites --*/
.dsb {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 200px;
}


/*-- homepage styles --*/
.alt-background {
  background-color: black;
}

.header-banner {
  position: relative;
  display: flex;
  justify-content: center;
}

.header-banner .header-image {
  position: absolute;
  display: none;
  height: auto;
}

.header-text {
  text-align: center;
}

.header-block {
  padding-top: 66px;
  padding-bottom: 70px;
  margin-left: 30px;
  margin-right: 30px;
  max-width: 825px;
  border-bottom: 1px solid black;
}

.header-block h2 {
  margin-top: 70px;
  border-bottom: 0px;
}

@media(min-width: 900px) {
.header-block {
  margin-left: auto;
  margin-right: auto;
}
}

@media (min-width: 1080px) {
.header-block {
  margin-left: auto;
  margin-right: auto;
}
}




.article-block {
  padding-top: 66px;
  padding-bottom: 70px;
  margin-left: 30px;
  margin-right: 30px;
  max-width: 825px;
  border-bottom: 1px solid black;
}

@media(min-width: 900px) {
.article-block {
  margin-left: auto;
  margin-right: auto;
}
}

@media (min-width: 1080px) {
.article-block {
  margin-left: auto;
  margin-right: auto;
}
}

.article-block h2 {
  margin-top: 70px;
  margin-left: 0px;
  border-bottom: 0px;
  color: black;
}




.pullout-block {
  text-align: center;
  margin-top: 70px;
  padding-top: 50px;
  padding-bottom: 50px;
  padding-left: 50px;
  padding-right: 50px;
  margin-left: 30px;
  margin-right: 30px;
  max-width: 1024px;
}

.pullout-block h2,
.pullout-block p {
  text-align: center;
  color: white;
}

@media(min-width: 900px) {
.pullout-block {
  margin-left: auto;
  margin-right: auto;
}
}

@media (min-width: 1080px) {
.pullout-block {
  margin-left: auto;
  margin-right: auto;
}
}




.button {
  border: none;
  border-radius: 0px;
  color: black;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
}

.button p {
  color: black;
  margin-bottom: 0px;
}

.button:hover {
  color: black;
}

.button1 {
  background-color: white;
}




.top-grid-text h6,
.top-grid-text h2,
.top-grid-text p {
  text-align: left;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 10px;
  margin-right: 10px;
  color: white;
}

.top-grid-block {
  padding-top: 70px;
  margin-left: 30px;
  margin-right: 30px;
  max-width: 825px;
}

@media(min-width: 900px) {
.top-grid-block {
  margin-left: auto;
  margin-right: auto;
}
}

@media (min-width: 1080px) {
.top-grid-block {
  margin-left: auto;
  margin-right: auto;
}
}

.bottom-grid-text h6,
.bottom-grid-text h2,
.bottom-grid-text p {
  text-align: left;
  margin-top: 10px;
  margin-right: 30px;
  color: #6c757d;
  border-bottom: none;
}

.bottom-grid-block {
  padding-top: 30px;
  padding-bottom: 70px;
  margin-left: 30px;
  margin-right: 30px;
  max-width: 825px;
  border-bottom: 1px solid black;
}

@media(min-width: 900px) {
.bottom-grid-block {
  margin-left: auto;
  margin-right: auto;
}
}

@media (min-width: 1080px) {
.bottom-grid-block {
  margin-left: auto;
  margin-right: auto;
}
}



.bannerad-text {
  text-align: center;
}

.bannerad-block {
  margin-top: 70px;
  padding-top: 70px;
  padding-bottom: 70px;
  padding-left: 30px;
  padding-right: 30px;
  margin-left: 30px;
  margin-right: 30px;
  margin-bottom: 70px;
  max-width: 825px;
}

.bannerad-block p {
  text-align: center;
  color: white;
  margin-bottom: 0px;
}

@media(min-width: 900px) {
.bannerad-block {
  margin-left: auto;
  margin-right: auto;
}
}

@media (min-width: 1080px) {
.bannerad-block {
  margin-left: auto;
  margin-right: auto;
}
}
/* 



.nav-footer {
  height: 448px;
} */

